# open-see-wee

./: .gitignore  README.md  pyproject.toml
code/: basics.ipynb  cropping.py  dimensions.py  image_arithmetic.py  image_bilateral_filtering.py  image_bitwise_xor.py  image_black_hat_morphology.py  image_blending.py  image_blurring.py  image_canny_edge_detection.py  image_closing.py  image_compression.py  image_emboss.py  image_erosion.py  image_feature_matching.py  image_filter_convolution.py  image_flipping.py  image_gaussian_blur.py  image_laplacian_edge_detection.py  image_median_blur.py  image_neighbourhood.py  image_opening.py  image_piecewise_linear.py  image_power_law_transform.py  image_rotation.py  image_sampling.py  image_sharpening.py  image_substraction.py  image_top_hat_morphology.py  image_translation.py  splitting_image_channels.py  utils.py  video_background_subtractor.py  video_flip.py  video_four_cc.py  video_object_tracking.py  video_read.py  video_resize.py  video_stream.ipynb
image/: bitmap_lossless_compressed_tiff.tiff
practice-code/: practice-file.py
tutorials/01_basics_and_io/: README.md  basics.ipynb  image_cropping.py  image_dimensions.py  image_flipping.py  image_rotation.py  image_sampling.py  image_scaling_resize_interpolation.py  image_shearing.py  image_translation.py  splitting_image_channels.py  video_read.py  video_resize.py
tutorials/02_image_filtering/: README.md  image_bilateral_filtering.py  image_blurring.py  image_emboss.py  image_filter_convolution.py  image_gaussian_blur.py  image_median_blur.py  image_neighbourhood.py  (+1 more)
(+43 files in other folders)
