[tool.poetry]
name = "open-see-wee"
version = "0.1.0"
description = "OpenCV tutorials and examples"
authors = ["Asif Sayyed <asifdotexe@gmail.com>"]
readme = "README.md"
packages = [{include = "tutorials"}]

[tool.poetry.dependencies]
python = "^3.13"
opencv-python = "^4.12.0.88"
numpy = "^2.2.6"
matplotlib = "^3.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
